# Evice-Blockchain-Tendermint-19s

./: .gitignore  Cargo.toml  README.md  start_testnet.sh
contracts/bridge_contract/: Cargo.toml
contracts/bridge_contract/src/: handlers.rs  lib.rs  state.rs
contracts/erc721/: Cargo.toml
contracts/erc721/src/: handlers.rs  lib.rs  state.rs
contracts/fungible_token/: Cargo.toml
contracts/fungible_token/src/: bridge.rs  handlers.rs  lib.rs  state.rs
contracts/simple_counter/: Cargo.toml
evice-contract-sdk/: Cargo.toml
evice-contract-sdk/src/: bridge.rs  env.rs  lib.rs  storage.rs
evice-core/: Cargo.toml
evice-core/src/: borsh_helpers.rs  lib.rs
evice_blockchain/: Cargo.toml  build.rs  rpc.proto
evice_blockchain/src/: blockchain.rs  consensus.rs  crypto.rs  genesis.rs  governance.rs  keystore.rs  l2_circuit.rs  lib.rs  main.rs  mempool.rs  p2p.rs  rpc.rs  rpc_client.rs  serde_helpers.rs  snapshot.rs  state.rs  trie_codec.rs  wasm_runtime.rs
tests/: full_flow.rs  slashing_test.rs
tests/common/: mod.rs
