# ==============================================================================
#                 EVICE BLOCKCHAIN - VIRTUAL WORKSPACE MANIFEST
# ==============================================================================
# File ini HANYA mendefinisikan anggota workspace, dependensi bersama,
# dan profil build. Tidak ada definisi [package] di sini.
# ==============================================================================

[workspace]
resolver = "2" # Menggunakan resolver fitur modern dari Cargo
members = [
    "evice_blockchain",         # Crate utama yang berisi node L1
    "evice-core",               # Crate tipe data bersama (no_std)
    "evice-contract-sdk",       # Pustaka untuk smart contract
    "contracts/fungible_token", # Contoh kontrak token
    "contracts/erc721",         # Contoh kontrak NFT
    "contracts/bridge_contract",# Kontrak bridge untuk L2 -> L1
]

# ==============================================================================
#                        DEPENDENSI BERSAMA (WORKSPACE)
# ==============================================================================
#
# Di dalam Cargo.toml milik crate lain (misal: evice_blockchain/Cargo.toml),
# Anda cukup menulis: `serde = { workspace = true }`
# ==============================================================================
[workspace.dependencies]
# --- Umum & Serialisasi ---
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "3.8.1", features = ["macros"] }
serde_bytes = "0.11"
bincode = "1.3.3"
hex = "0.4"
clap = { version = "4.5", features = ["derive"] }
thiserror = "1.0"
rand = "0.8"
uuid = { version = "1.8", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
borsh = { version = "1.5.7", features = ["derive"] }
zstd = "0.13"
tempfile = "3.10"
flate2 = "1.0" 
spin = "0.10.0"
lru = "0.16.0"

# --- Asinkronus & Jaringan ---
tokio = { version = "1", features = ["full"] }
futures = "0.3"
reqwest = { version = "0.12", features = ["json"] }
actix-web = "4"
actix-web-ratelimit = "0.1.1"

# --- Kriptografi & Keamanan ---
sha2 = "0.10"
sha3 = "0.10.8"
zeroize = "1.5"
rpassword = "7.3"
merlin = "3.0"
schnorrkel = { version = "0.11", features = ["getrandom"] }
pqcrypto-dilithium = "0.5"
pqcrypto-traits = "0.3.5"
scrypt = "0.11.0"
chacha20poly1305 = { version = "0.10", features = ["alloc"] }
cipher = { version = "0.4.4", features = ["alloc"] }
aead = "0.5"
aes = "0.8.4"
hmac = "0.12.1"
cbc = "0.1.2"

# --- Logging & Observability ---
log = "0.4"
tracing = "0.1"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
env_logger = "0.11.3"
prometheus = "0.14"

# --- Jaringan P2P (libp2p) ---
libp2p = { version = "0.56.0", features = ["full"] }
libp2p-request-response = { version = "0.29.0", features = ["cbor"] }

# --- RPC (gRPC) ---
rustls = "0.20"
prost = "0.14.1"
tonic = { version = "0.14.1", features = ["transport", "codegen", "tls-ring"] }
tonic-prost = "0.14.1"
tonic-prost-build = "0.14.1"

# --- Database & State (Trie) ---
rocksdb = { version = "0.23.0", default-features = false, features = ["lz4", "bindgen-runtime"] }
hash-db = { git = "https://github.com/paritytech/trie" }
trie-db = { git = "https://github.com/paritytech/trie" }
trie-root = { git = "https://github.com/paritytech/trie" }
reference-trie = { git = "https://github.com/paritytech/trie", default-features = false, features = ["std"] }
keccak-hasher = { git = "https://github.com/paritytech/trie" }
memory-db = { git = "https://github.com/paritytech/trie" }
parity-db = "0.5.4"
parity-scale-codec = { version = "3.6.12", features = ["derive"] }

# --- ZK-SNARKs (arkworks) ---
ark-bls12-381 = "0.4.0"
ark-groth16 = "0.4.0"
ark-snark = "0.4.0"
ark-ff = { version = "0.4.0", features = ["std"] }
ark-ec = "0.4.0"
ark-r1cs-std = "0.4.0"
ark-relations = "0.4.0"
ark-serialize = "0.4.0"
ark-std = { version = "0.4.0", features = ["parallel"] }
ark-crypto-primitives = { version = "0.4.0", features = ["sponge", "r1cs", "merkle_tree"] }

# --- WASM Runtime ---
wasmer = { version = "6.0.1", features = ["compiler", "cranelift"] }
wasmparser = "0.236.0"
wasmer-middlewares = "6.0.1"
wasmer-engine-universal = "2.3.0"

# ==============================================================================
#                           PROFIL BUILD BERSAMA
# ==============================================================================
[profile.dev]
panic = "unwind"

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
strip = true
opt-level = 3
